# uw-course

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  opencode.jsonc  pyproject.toml  requirements.txt  schema.txt
.cursor/: mcp.json
.github/workflows/: publish-to-pypi.yml  tests.yml
context-forge/: job-context.md
context-forge/implementation/: result.json
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ActiveSectionPanel.tsx  AppHeader.tsx  ConflictBar.tsx  CourseCard.tsx  CourseResultCard.tsx  CourseSearch.tsx  ExplorerView.tsx  GooseEasterEgg.tsx  GooseMark.tsx  Hero.tsx  PlanModal.tsx  PlanPanel.tsx  PlanTools.tsx  ScheduleCenter.tsx  SchedulePanel.tsx  SearchPanel.tsx  SelectionList.tsx  TimetableView.tsx  Toast.tsx
frontend/src/utils/: courseColor.ts  schedule.ts
scripts/: build_frontend.sh
tests/: conftest.py  test_config.py  test_runner.py  test_setting.py  test_utils.py
uw_course/: __init__.py  __main__.py  config.py  main.py  pdfschedule.py  setting.py
uw_course/ClassSchedule/: SearchInfo.py  runner.py
uw_course/DB/: dbClass.py
uw_course/Utils/: manageDBClass.py  randomColor.py
uw_course/ui/: __init__.py  app.py  components.py  constants.py  schedule_view.py
uw_course/web/: __init__.py  app.py  services.py
uw_course/web/static/: app.js
uw_course/web/templates/: index.html
