[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uw-course"
version = "2.0.0"
description = "A course helper tool for managing UW courses schedule"
authors = [
    { name = "Jiucheng Zang", email = "git.jiucheng@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs",
    "click",
    "PyYAML",
    "reportlab",
    "certifi",
    "dnspython",
    "Pillow",
    "pymongo",
    "textual",
    "python-dotenv>=1.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Education",
    "Topic :: Office/Business :: Scheduling",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/zangjiucheng/uw-course"
Repository = "https://github.com/zangjiucheng/uw-course"

[project.scripts]
uw-course = "uw_course.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pypi]
repository = "https://pypi.org/project/uw-course"
github = "zangjiucheng/uw-course"
