[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uw-course"
version = "3.1.0"
description = "A browser-based University of Waterloo course planner backed by live MongoDB data"
authors = [
    { name = "Jiucheng Zang", email = "git.jiucheng@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi",
    "dnspython",
    "flask",
    "pymongo"
]
keywords = ["uwaterloo", "courses", "schedule", "planner", "flask", "mongodb"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Education",
    "Topic :: Office/Business :: Scheduling",
]

[project.urls]
Homepage = "https://github.com/zangjiucheng/uw-course"
Repository = "https://github.com/zangjiucheng/uw-course"

[project.scripts]
uw-course = "uw_course.main:main"

[tool.setuptools.packages.find]
include = ["uw_course*"]

# The built Vite frontend (index.html + hashed assets/* + icon) is copied into
# uw_course/web/static before packaging; ship all of it so `uw-course` serves
# the web UI straight from a PyPI install. See scripts/build_frontend.sh.
[tool.setuptools.package-data]
"uw_course.web" = ["static/*", "static/assets/*"]

[tool.pypi]
repository = "https://pypi.org/project/uw-course"
github = "zangjiucheng/uw-course"
